# whisper

./: .githu  .gitignore  .gitmodules  .metadata  .pubgitgnore  .pubignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_ID.md  analysis_options.yaml  local.properties  main.cpp  pubspec.yaml  readme.md
.github/: FUNDING.yaml  FUNDING.yml  funding.yaml
.github/workflows/: compile-android-arm.yaml  cross-compile-application.yaml  cross-compile-library.yaml  test-compile.yaml  test-windows.yaml
compiled/: .gitignore
example/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
example/android/: .gitignore
example/android/app/: build.gradle
example/ios/: .gitignore
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: .gitignore  CMakeLists.txt  main.cc  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: .gitignore
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: manifest.json
example/windows/: .gitignore  CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: flutter_window.cpp  main.cpp  utils.cpp  win32_window.cpp
examples/whisper_app/: LICENSE  README.md  pubspec.yaml
examples/whisper_app/android/app/: build.gradle
examples/whisper_app/ios/Runner/: Info.plist
examples/whisper_app/ios/Runner.xcodeproj/: project.pbxproj
examples/whisper_app/lib/: main.dart
examples/whisper_app/linux/: CMakeLists.txt  my_application.cc
examples/whisper_app/macos/Runner.xcodeproj/: project.pbxproj
examples/whisper_app/test/: widget_test.dart
examples/whisper_app/web/: index.html  manifest.json
examples/whisper_app/windows/: CMakeLists.txt
examples/whisper_app/windows/runner/: Runner.rc  main.cpp
examples/whisper_server/: README.md  pubspec.yaml  release.sh
examples/whisper_server/generate_scheme/: isar_scheme.dart  scheme.dart
examples/whisper_server/lib/: whisper_server.dart
examples/whisper_server/lib/isar_scheme/: isar_scheme.dart  transcribe.dart  transcribe.g.dart
examples/whisper_server/lib/scheme/: error.dart  get_task.dart  get_text_from_audio.dart  json_dart.dart  ok.dart  scheme.dart  task.dart  transcribe.dart
examples/whisper_server/release/: Dockerfile
examples/whisper_server/test/: whisper_server_test.dart
ffmpeg/: qt-faststart  readme.txt
ffmpeg/manpages/: ffmpeg-all.txt  ffmpeg-bitstream-filters.txt  ffmpeg-codecs.txt  ffmpeg-devices.txt  ffmpeg-filters.txt  ffmpeg-formats.txt  ffmpeg-protocols.txt  ffmpeg-scaler.txt  ffmpeg-utils.txt  ffmpeg.txt  ffprobe.txt
ffmpeg/model/: vmaf_4k_v0.6.1.json
lib/: ffmpeg.dart  whisper_dart.dart
lib/core/: core.dart
lib/core/whisper/: core.dart  whisper.dart
lib/src/: whisper_dart.dart  whisper_dart_bindings.dart
models/: .gitignore
native/: .gitignore  CMakeLists copy.txt  CMakeLists.txt  compile.sh  whisper_library.cpp
native/package/json/: json.hpp
native_lib/: CMakeLists.txt  Makefile  main.cpp  readme.md
native_lib/whisper.cpp/: whisper.cpp
native_lib/whisper.cpp/examples/main/: main.cpp
package/whisper/: .gitignore  LICENSE  pubspec.yaml  pubspec_overrides.yaml
package/whisper/example/: .gitignore  pubspec.yaml
package/whisper/example/android/: .gitignore
package/whisper/example/ios/: .gitignore
package/whisper/example/windows/: .gitignore
package/whisper/lib/: dart.dart  whisper.dart  whisper_core.dart
package/whisper/lib/api/: api.dart
package/whisper/lib/dart/: io.dart  (+3 more)
package/whisper/test/: whisper_test.dart
package/whisper_dart/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
package/whisper_dart/example/: example.dart  pubspec.yaml
package/whisper_dart/generate_scheme/: generate_scheme.dart
package/whisper_dart/lib/: whisper_args.dart  whisper_audio_convert.dart  whisper_dart.dart  whisper_request.dart
package/whisper_dart/test/: test.dart
package/whisper_flutter/: .gitignore  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
package/whisper_flutter/android/: .gitignore  build.gradle  settings.gradle
package/whisper_flutter/example/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
package/whisper_flutter/ios/: .gitignore  whisper_flutter.podspec
package/whisper_flutter/lib/: whisper_flutter.dart  whisper_flutter_bindings_generated.dart
package/whisper_flutter/linux/: CMakeLists.txt  whisper_flutter_plugin.cc  whisper_flutter_plugin_private.h
package/whisper_flutter/macos/: whisper_dart.podspec  whisper_flutter.podspec
package/whisper_flutter/src/: CMakeLists.txt  Makefile  readme.md
package/whisper_flutter/windows/: .gitignore  CMakeLists.txt  whisper_flutter_plugin.cpp  whisper_flutter_plugin.h  whisper_flutter_plugin_c_api.cpp
package/whisper_library/: README.md  ffigen.yaml  pubspec.yaml
package/whisper_library/android/: .gitignore  build.gradle  settings.gradle
package/whisper_library/example/: .gitignore  pubspec.yaml
package/whisper_library/ios/: whisper_library.podspec
package/whisper_library/lib/: whisper_library.dart  whisper_library_bindings_generated.dart
package/whisper_library/linux/: CMakeLists.txt
package/whisper_library/macos/: whisper_library.podspec
package/whisper_library/src/: .gitignore  CMakeLists copy.txt  CMakeLists.txt  compile.md  compile.sh  whisper_library.cpp
package/whisper_library/windows/: .gitignore  CMakeLists.txt
samples/: .gitignore
src/: CMakeLists.txt  main.cpp
test/: test.dart  whisper_dart_test.dart
whisper.cpp/: .gitignore  a.out  android.sh  azka  compile.sh  lib.c  lib.cpp  main.cpp  test.cpp  whisper.cpp
whisper.cpp/samples/: .gitignore
whisper.cpp/whisper/: pubspec.yaml
whisper.cpp/whisper/test/: whisper_test.dart
whisper_api/: pubspec.yaml  whisper-api.deb
whisper_api/test/: whisper_api_test.dart
whisper_api_railway/: Dockerfile  railway.json  whisper-api.deb
windows/: CMakeLists.txt
(+92 files in other folders)
